--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,24 @@
     box-sizing: border-box;
 }
 
-body{
-    background-color: white;
+.container::after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 /* / common */
 
+
+body{
+    background-color: white;
+}
+
+p {
+    visibility: hidden;
+}
+
+/* Inizio Header  */
 .first-header {
     background-color: #E67AE6;
     width: 80%;
@@ -23,22 +35,59 @@ body{
     width: 80%;
     height: 400px;
 }
+/* fine Header  */
 
+/* Inizio main  */
 .container{
     background-color: #1286FF;
     height: 500px;
     width: 80%;
-    margin: 15px auto;
+    margin: 10px auto;
 }
 
-.content{
-    background-color: green;
-    width: 80%;
+.content {
+    padding: 5px;
+    margin: 5px;
 }
 
+.intro{
+    background-color: #ABCFE7;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.left-sidebar {
+    background-color: #ABCFE7;
+    width: calc(100% / 4 - 5px);
+    margin-top: 15px;
+    margin-left: 0;
+    float: left;
+}
+
+.right-sidebar {
+    background-color: #ABCFE7;
+    width: calc(100% / 4 - 5px);
+    margin-top: 15px;
+    margin-right: 0;
+    float: right;
+
+}
+
+.center {
+    background-color: #ABCFE7;
+    width: calc((100% / 4 - 5px) * 2);
+    margin-top: 15px;
+    float: left;
+}
+
+/* fine main  */
+
+/* inizio footer  */
 footer{
     background-color: #8702FD;
     width: 80%;
     height: 80px;
-    margin: 10px auto;
+    margin-top: 5px;
+    margin-bottom: 15px;
 }
+/* Fine footer  */
