--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
+    word-wrap: break-word;
 }
 
 .container::after {
